fix main content alignment

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -71,6 +71,9 @@ $desktop-k: 2120px;
 $content-tablet: 627px;
 $content: 1076px;
 
+$sidebar-collapsed: 64px;
+$sidebar: 256px;
+
 %scroll {
   scrollbar-color: $text-weaker rgba(0,0,0,0);
 
